fixed button appearance on safari

--- a/css/devpri-me.css
+++ b/css/devpri-me.css
@@ -36,9 +36,16 @@ img.logo {
 }
 
 a.button {
-  -webkit-appearance: button;
-  -moz-appearance: button;
-  appearance: button;
+  -webkit-appearance: none;
+  -webkit-box-shadow: 1px 1px 0px #ffffff, 2px 2px 0px #ffffff,
+    3px 3px 0px #ffffff, 4px 4px 0px #ffffff, 5px 5px 0px #ffffff,
+    6px 6px 0px #ffffff;
+  -moz-appearance: none;
+  -moz-box-shadow: 1px 1px 0px #ffffff, 2px 2px 0px #ffffff, 3px 3px 0px #ffffff,
+    4px 4px 0px #ffffff, 5px 5px 0px #ffffff, 6px 6px 0px #ffffff;
+  -ms-appearance: none;
+  -ms-box-shadow: 1px 1px 0px #ffffff, 2px 2px 0px #ffffff, 3px 3px 0px #ffffff,
+    4px 4px 0px #ffffff, 5px 5px 0px #ffffff, 6px 6px 0px #ffffff;
 
   text-decoration: none;
   color: initial;
@@ -67,5 +74,7 @@ a.button:active {
 
   .description {
     margin-bottom: 10%;
+    margin-left: 10%;
+    margin-right: 10%;
   }
 }
